background change, login change, bug on mobile fix, api token storing however issue with storing from some mobile browsers that purposely block cross site traffic

--- a/src/app/pages/style.css
+++ b/src/app/pages/style.css
@@ -9,12 +9,7 @@
     box-sizing: border-box;
 }
 
-body{
-    font-family: 'Lexend';
-    background: rgb(115,34,132);
-background: linear-gradient(90deg, rgba(115,34,132,1) 0%, rgba(181,174,224,1) 100%);
 
-}
 
 /* Reapply the pointer cursor for anchor tags */
 a, button {
